service.yaml
# https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  name: uptime-kuma-web
  namespace: uptime-kuma
spec:
  selector:
    app: uptime-kuma
  type: ClusterIP
  ports:
  - name: uptime-kuma-web
    protocol: TCP
    port: 80
    targetPort: 3001
---
