ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uptime-kuma-ingress
  namespace: uptime-kuma
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    cert-manager.io/cluster-issuer: dns-clusterissuer  
spec:
  rules:
  - host: uptime.thejimnicholson.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: uptime-kuma-web
            port:
              number: 80
  tls:
  - hosts:
    - uptime.thejimnicholson.com
    secretName: uptime.thejimnicholson.com              
---
